Revision history for {{$dist->name}}

{{$NEXT}}

0.028     2012-10-19 06:55:15 America/Los_Angeles

        Fix $git->branch compatibility with git < 1.7.1 by tweaking color calling convention (Vyacheslav Matyukhin)
    
0.027     2012-09-19 22:32:52 America/New_York

        Disable --no-abbrev-commit when git doesn't support it

0.026     2012-09-17 20:52:45 America/Los_Angeles

        Disable ANSI output for the branch command (John SJ Anderson)
        Force --no-abbrev-commit in git-log wrapper (Rob Hoelz)
        Add ABSTRACT for G::W::Statuses (John SJ Anderson)
        Fix the environment in a more sane way, to resolve issues on 5.8.x (introduced in v0.022) (Karen Etheridge)

0.025     2012-07-18 12:38:05 America/New_York

        Add 'fatal' option for RequiresExternal dzil plugin

0.024     2012-07-18 12:32:17 America/New_York

        make sure no line ending munging is done to get consistent
        hashing in test (Graham Knop)


0.023     2012-06-28 09:22:13 America/New_York

        Skip hash test on git versions before 1.6.1 (Eduardo Ariño de la Rubia)

        Add explicit external dep on 'git' in $PATH; remove test code
        that bailed when 'git' wasn't in $PATH (JSJA)

        Remove t/pod* in favor of dzil plugin POD coverage/syntax tests (JSJA)

0.022     2012-06-27 17:00:46 America/New_York

        Unset GIT_PAGER_IN_USE env var to stop any ANSI colorization (Karen Etheridge)

0.021     2012-06-27 16:48:42 America/New_York
        Splitted up classes inside Git::Wrapper to individual package files (Torsten Raudssus)
        Added the handling of ->log({ raw => 1 }) to get the file modifications (Torsten Raudssus)
        add -STDIN option for passing content via STDIN (Graham Knop)

0.020     2012-04-28 11:21:55 America/New_York

        dist.ini tweaking:
	    * Exclude archived releases and dist.ini from dist
            * Don't ship README; only README.mkdn
            * Set homepage and bugtracker URLs in META.yml
